# pyconveyor

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Plan.md  README.md  SCHEMA.md  TODOS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: concepts.md  examples.md  index.md  quickstart.md
docs/guides/: batch.md  benchmarking.md  caching.md  editor-setup.md  expressions.md  hooks.md  llm-utilities.md  providers.md  step-types.md  validation-feedback.md  vocab.md  yaml-schema.md
docs/reference/: cli.md  schema.md
src/pyconveyor/: __init__.py  _logging.py  _utils.py  batch.py  benchmark.py  cache.py  cli.py  errors.py  expr.py  graph.py  infer.py  llm.py  prompt.py  report.py  runner.py  schema_builder.py  vocab.py
src/pyconveyor/steps/: __init__.py  condition_step.py  ensemble_step.py  http_step.py  llm_step.py  parallel_step.py  script_step.py
tests/: conftest.py  test_batch.py  test_benchmark.py  test_cache.py  test_cli.py  test_ensemble.py  test_expr.py  test_graph.py  test_infer.py  test_llm.py  test_logging.py  test_outputs.py  test_prompt.py  test_report.py  test_runner.py  test_schema_builder.py  test_vocab.py
tests/fixtures/: __init__.py  schemas.py  steps.py
tests/fixtures/benchmarks/case_greeting_correct/: expected.json  input.json
tests/fixtures/benchmarks/case_greeting_partial/: expected.json
tests/fixtures/benchmarks/case_greeting_wrong/: expected.json
tests/fixtures/pipelines/: condition.yaml  ensemble.yaml  ensemble_no_judge.yaml  ensemble_optional_fail.yaml  greet.j2  hello.yaml  on_error_continue.yaml  outputs.yaml  outputs_ensemble.yaml  parallel.yaml  retry_feedback.yaml  skip_remaining.yaml  vocab_pipeline.yaml
