[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconveyor"
version = "0.1.0"
description = "Deterministic YAML pipeline engine for structured LLM extraction"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "llm",
    "extraction",
    "pipeline",
    "pydantic",
    "yaml",
    "structured-output",
    "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
progress = ["tqdm>=4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML",
    "types-tqdm",
]

[project.scripts]
pyconveyor = "pyconveyor.cli:main"

[project.urls]
Repository = "https://github.com/VictorGambarini/pyconveyor"
Documentation = "https://pyconveyor.readthedocs.io"
Changelog = "https://github.com/VictorGambarini/pyconveyor/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pyconveyor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
